--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,11 +1,11 @@
 {
-    "compilerOptions": {
-      "target": "es6",
-      "allowSyntheticDefaultImports": true,
-      "baseUrl": "./",
-      "paths": {
-        "~/*": ["src/*"]
-      }
-    },
-    "exclude": ["node_modules", "dist", "build"]
-  }
+  "compilerOptions": {
+    "target": "es6",
+    "allowSyntheticDefaultImports": false,
+    "baseUrl": ".",
+    "paths": {
+      "~/*": ["./src/*"]
+    }
+  },
+  "exclude": ["node_modules", "build"]
+}
